--- a/templates/front/game.html.twig
+++ b/templates/front/game.html.twig
@@ -232,7 +232,7 @@
 							<span>Local Games</span>
 						</h3>
 						<div class="bt-option">
-							<a href="#">Home</a>
+							<a href="{{path('app_game_front')}}">Home</a>
 
 							<span>Games</span>
 						</div>
