--- a/templates/game/game2.html.twig
+++ b/templates/game/game2.html.twig
@@ -27,13 +27,14 @@
 			<h4 style="color: azure" align="center">RULE : BEAT THE TIME!</h4>
 		</ul>
 	</div>
-	<h1>Your Rating</h1>
-	{{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
-	{{ form_widget(form) }}
-	<button type="submit" class="btn-success">Submit
-	</button>
+	<h1>
+		{{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
+		{{ form_widget(form) }}
+		<button type="submit" class="btn-success">Submit
+		</button></h1>
+
+
 	{{ form_end(form) }}
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<style>
 		* {
 			font-family: "Lato";
@@ -41,12 +42,12 @@
 
 		/*decoration*/
 		h1 {
-			margin: 20px 50px 0;
-			background: #EFF0F2;
-			width: 275px;
+			margin: -300px -1px 0;
+			background: #581c22;
+			width: 199px;
 			font-size: 1.5em;
 			text-align: center;
-			border-radius: 5px 5px 0 0;
+			border-radius: 22px 35px 0 0;
 			padding: 30px 0;
 			color: #34495E;
 		}
