--- a/templates/produit2/Error.html.twig
+++ b/templates/produit2/Error.html.twig
@@ -1,5 +1,4 @@
 {% extends 'admin/baseAdmin.html.twig' %}
 {% block body %}
-    <h1>Une erreur est survenue lors de votre paiement !</h1>
+	<h1>Failed to proceed payment!</h1>
 {% endblock %}
-
