--- a/templates/admin/baseAdmin.html.twig
+++ b/templates/admin/baseAdmin.html.twig
@@ -12,7 +12,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																										           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{asset('admin/assets/css/bootstrap.min.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/font-awesome.min.css')}}"/>
@@ -63,7 +63,7 @@
 				<div class="sidebar-header">
 					<div class="logo">
 
-						<a href="index.html"><img src=" {{asset('admin/assets/images/logo/logoesplay1.png')}}" alt="logo"/></a>
+						<a href="{{ path('app_stat') }}"><img src=" {{asset('admin/assets/images/logo/logoesplay1.png')}}" alt="logo"/></a>
 					</div>
 				</div>
 				<div
@@ -92,14 +92,6 @@
 									<a href="{{ path('app_game_index')}}" aria-expanded="true">
 										<i class="fa fa-gamepad"></i>
 										<span>Games</span>
-									</a>
-
-								</li>
-								<li>
-									<!-- RECOMENDED GAMES -->
-									<a href="{{ path('app_recomendedg_index') }}" aria-expanded="true">
-										<i class="fa fa-credit-card"></i>
-										<span>Recomended Games</span>
 									</a>
 
 								</li>
@@ -336,7 +328,7 @@
 								<h4 class="page-title pull-left">Dashboard</h4>
 								<ul class="breadcrumbs pull-left">
 									<li>
-										<a href="index.html">Home</a>
+										<a href="{{ path('app_stat') }}">Home</a>
 									</li>
 									<li>
 
@@ -404,7 +396,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -439,7 +431,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -453,7 +445,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -478,7 +470,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -502,7 +494,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -516,7 +508,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 					</div>
@@ -545,7 +537,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																																																																																																																																																																								                with the input.
+																																																																																																																																																																																																																																																																																																																																																																																	                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
@@ -568,7 +560,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																																																																																																																																																																								                with the input.
+																																																																																																																																																																																																																																																																																																																																																																																	                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
