--- a/templates/admin/store.html.twig
+++ b/templates/admin/store.html.twig
@@ -3,27 +3,96 @@
 
 {% block body %}
 	<!-- page title area end -->
+	<style>
+
+		.custom-btn {
+			width: 130px;
+			height: 40px;
+			color: #e3e9ff;
+			border-radius: 11px;
+			padding: 10px 33px;
+			font-weight: 200;
+			background: transparent;
+			cursor: pointer;
+			transition: all 0.3s ease;
+			position: relative;
+			display: inline-block;
+			box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5), 7px 7px 20px 0 rgba(0, 0, 0, 0.1), 4px 4px 5px 0 rgba(0, 0, 0, 0.1);
+			outline: none;
+		}
+		.btn-15 {
+			background: #1a44d4;
+			border: none;
+			z-index: 1;
+		}
+		.btn-15:after {
+			position: absolute;
+			content: "";
+			width: 0;
+			height: 100%;
+			top: 0;
+			right: 0;
+			z-index: -1;
+			background-color: #801ec4;
+			border-radius: 5px;
+			box-shadow: inset 2px 2px 2px 0 rgba(255, 255, 255, 0.5), 7px 7px 20px 0 rgba(0, 0, 0, 0.1), 4px 4px 5px 0 rgba(0, 0, 0, 0.1);
+			transition: all 0.3s ease;
+		}
+		.btn-15:hover {
+			color: #fff;
+		}
+		.btn-15:hover:after {
+			left: 0;
+			width: 100%;
+		}
+		.btn-15:active {
+			top: 2px;
+		}
+		.btn-9 {
+			border: none;
+			transition: all 0.3s ease;
+			overflow: hidden;
+		}
+		.btn-9:after {
+			position: absolute;
+			content: " ";
+			z-index: -1;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: #1fd1f9;
+			background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+			transition: all 0.3s ease;
+		}
+		.btn-9:hover {
+			background: transparent;
+			box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), -4px -4px 6px 0 rgba(116, 125, 136, 0.2), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5), inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+			color: #fff;
+		}
+		.btn-9:hover:after {
+			-webkit-transform: scale(2) rotate(180deg);
+			transform: scale(2) rotate(180deg);
+			box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), -4px -4px 6px 0 rgba(116, 125, 136, 0.2), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5), inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+		}
+	</style>
 	<div class="main-content-inner">
-		<a class="btn btn-dark" href="{{ path('/produit2/stat') }}">
-			Go TO STATS
-		</a>
-		<a class="btn btn-dark" href="{{ path('app_commande_index') }}">
-			Order list
-		</a>
-		<a class="btn btn-dark" href="{{ path('app_produit2_new') }}">
-			Create new
-		</a>
-		<a class="btn btn-dark" href="{{ path('app_category_p_new')}}">
-			Category
-		</a>
-		<a class="btn btn-dark" href="{{ path('app_produit2_index')}}">
-			GO TO FRONT
-		</a>
 
 
 		<div class="row" style="margin-top: 30px;">
 			<div class="col-11">
-				<a href="{{ path('app_produit2_new') }}" class="btn btn-success btn-xs pull-right">Add new product</a>
+				<a class="custom-btn btn-15" href="{{ path('/produit2/stat') }}">
+					STATS
+				</a>
+				<a class="custom-btn btn-15" href="{{ path('app_commande_index') }}">
+					Order list
+				</a>
+
+				<a class="custom-btn btn-15" href="{{ path('app_category_p_new')}}">
+					Category
+				</a>
+
+				<a href="{{ path('app_produit2_new') }}" class="btn-9 btn-success btn-xs pull-right">Add new product</a>
 			</div>
 		</div>
 		<div>
@@ -31,7 +100,7 @@
 			<form role="search" id="nav-search-form" method="post" action="{{ path('/produit/tri') }}">
 				<div class="btn-toolbar" role="toolbar" aria-label="Programmatic control">
 					<div class="btn-group btn-group-sm" aria-label="Set Select2 option">
-						<button class="js-programmatic-set-val btn btn-outline-primary mr-1 mb-1">
+						<button style="margin-top: 20px" class="js-programmatic-set-val btn btn-outline-primary mr-1 mb-1">
 							tri par prix
 						</button>
 					</div>
@@ -53,8 +122,8 @@
 							<h3>{{ produit2.prix }}
 								dt</h3>
 							<p class="card-text">{{ produit2.description }}.</p>
-							<a href="{{ path('app_produit2_edit', {'idp2': produit2.idp2}) }}" class="btn btn-outline-warning btn-xs">edit</a>
-							<a href="" class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#deleteModal">Delete</a>
+							<a href="{{ path('app_produit2_edit', {'idp2': produit2.idp2}) }}" class="btn btn-outline-warning btn-xs">Manage</a>
+
 						</div>
 					</div>
 				</div>
