--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,98 +1,109 @@
 {% extends 'front/baseFront.html.twig' %}
 
-{% block title %}Cart!{% endblock %}
+{% block title %}Cart!
+{% endblock %}
 
 {% block body %}
 
+	<style>
+		body {
 
-    <div class="bg-light p-3" bgcolor="#a9a9a9">
-        <h1>Votre panier</h1>
-    </div>
-    {% if carts | length > 0 %}
-        <table class="table" bgcolor="#a9a9a9">
-            <thead>
-            <tr bgcolor="#a9a9a9">
-                <th>Item</th>
-                <th>Price</th>
-                <th>Quantity</th>
-                <th>Total</th>
-                <th></th>
-            </tr>
-            </thead>
+			font-family: 'Poppins', sans-serif;
+			line-height: 1.5;
+			background-color: #0d0d0d;
 
-                <tbody>
+		}
+	</style>
+	<section style="background-color: #0d0d0d;">
 
-                {% for cart in carts %}
-                    <tr bgcolor="#a9a9a9">
+		<div class="container">
+			<div class="p-3">
+				<h3 style="color:#e11919; margin-top: 50px;">Your orders</h3>
+			</div>
+			{% if carts | length > 0 %}
+				<table class="table" bgcolor="#d8d5d5" style="margin-top: 50px">
 
-                        <td>{{ cart.produit.nom }}</td>
-                        <td>{{ cart.produit.prix}}</td>
-                        <td>{{ cart.quantity}}</td>
-                        <td>{{ cart.produit.prix * cart.quantity }}</td>
+					<thead>
+						<tr bgcolor="#d8d5d5">
+							<th>Item</th>
+							<th>Price</th>
+							<th>Quantity</th>
+							<th>Total</th>
+							<th></th>
+						</tr>
+					</thead>
 
-                       <td>
-                            <a href="{{ path('cart_remove', {'idp2': cart.produit.idp2})  }}" class="btn btn-danger btn-sm">
-                                <i class="fas fa-trash"></i>
-                            </a>
-                           <a href="{{ path('app_commande_new') }}"class="btn btn-success float-centre">
-                               <i class="fas fa-shopping-cart mr-1"></i>
-                               Order
-                           </a>
+					<tbody bgcolor="#d8d5d5">
+
+						{% for cart in carts %}
+							<tr bgcolor="#d8d5d5">
+
+								<td>{{ cart.produit.nom }}</td>
+								<td>{{ cart.produit.prix}}</td>
+								<td>{{ cart.quantity}}</td>
+								<td>{{ cart.produit.prix * cart.quantity }}</td>
+
+								<td>
+									<a href="{{ path('cart_remove', {'idp2': cart.produit.idp2}) }}" class="btn btn-danger btn-sm">
+										<i class="fa fa-trash"></i>
+									</a>
+									<a href="{{ path('app_commande_new') }}" class="btn btn-success btn-sm float-centre">
+										<i class="fa fa-shopping-cart mr-1"></i>
+										Order
+									</a>
 
 
-                       </td>
+								</td>
 
-                    </tr>
+							</tr>
 
-                {% endfor %}
+						{% endfor %}
 
 
-                </tbody>
+					</tbody>
 
-            <tfoot>
+					<tfoot>
 
-            <tr>
-                <td colspan="3" class="text-right" bgcolor="#a9a9a9">Total :
-                </td>
-                <td bgcolor="#a9a9a9">{{ total }}</td>
-                <td> <a href="{{path("delete_all")}}"  class="btn btn-danger btn-sm">
-                        <i class="fas fa-trash"></i>
-                    </a></td>
-            </tr>
-            </tfoot>
-        </table>
-        <script src="https://js.stripe.com/v3/"></script>
-        <button id="checkout-button" class="btn btn-primary">Procéder au paiement</button>
-    {% else %}
-        <p>vide !</p>
-    {% endif %}
-    <script type="text/javascript">
-        // Create an instance of the Stripe object with your publishable API key
-        var stripe = Stripe('pk_test_51KY8A4FFpLUKdfWcnshDIcYnoInv0YIxfdZhcvHoTU0pXU813rfb3uyoxmW8kiEKhQtqQNYZpgEGkDcIvts78u2Z007Zew5SZv');
-        var checkoutButton = document.getElementById('checkout-button');
-        checkoutButton.addEventListener('click', function() {
-            // Create a new Checkout Session using the server-side endpoint you
-            // created in step 3.
-            fetch('/create-checkout-session', {
-                method: 'POST',
-            })
-                .then(function(response) {
-                    return response.json();
-                })
-                .then(function(session) {
-                    return stripe.redirectToCheckout({ sessionId: session.id });
-                })
-                .then(function(result) {
-                    // If `redirectToCheckout` fails due to a browser or network
-                    // error, you should display the localized error message to your
-                    // customer using `error.message`.
-                    if (result.error) {
-                        alert(result.error.message);
-                    }
-                })
-                .catch(function(error) {
-                    console.error('Error:', error);
-                });
-        });
-    </script>
+						<tr>
+							<td colspan="3" class="text-right" bgcolor="#d8d5d5">Total :
+							</td>
+							<td bgcolor="#a9a9a9">{{ total }}</td>
+							<td>
+								<a href="{{path("delete_all")}}" class="btn btn-danger btn-sm">
+									<i class="fa fa-trash"></i>
+								</a>
+							</td>
+						</tr>
+					</tfoot>
+				</table>
+				<script src="https://js.stripe.com/v3/"></script>
+
+			{% else %}
+				<p>vide !</p>
+			{% endif %}
+		</div>
+	</section>
+	<script type="text/javascript">
+		// Create an instance of the Stripe object with your publishable API key
+var stripe = Stripe('pk_test_51KY8A4FFpLUKdfWcnshDIcYnoInv0YIxfdZhcvHoTU0pXU813rfb3uyoxmW8kiEKhQtqQNYZpgEGkDcIvts78u2Z007Zew5SZv');
+var checkoutButton = document.getElementById('checkout-button');
+checkoutButton.addEventListener('click', function () {
+// Create a new Checkout Session using the server-side endpoint you
+// created in step 3.
+fetch('/create-checkout-session', {method: 'POST'}).then(function (response) {
+return response.json();
+}).then(function (session) {
+return stripe.redirectToCheckout({sessionId: session.id});
+}).then(function (result) {
+// If `redirectToCheckout` fails due to a browser or network
+// error, you should display the localized error message to your
+// customer using `error.message`.
+if (result.error) {
+alert(result.error.message);
+}
+}).catch(function (error) {
+console.error('Error:', error);
+});
+});
+	</script>
 {% endblock %}
