--- a/templates/commande/Commande.html.twig
+++ b/templates/commande/Commande.html.twig
@@ -1,17 +1,43 @@
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{asset('admin/assets/css/bootstrap.min.css')}}"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{% endblock %}
 {% block body %}
-    <h1 align="center">Détails de la commande</h1><hr>
 
-    <body>
-    <h3>Numéro de la commande</h3>
-    {% for c in commande %}
-        <p>{{ c.idCommande }}</p>
-        <br>
-        <h3>Quantity</h3>
-        <p>{{ c.quantite}}</p>
-        <br>
-        <h3>User Code</h3>
-        <p>{{ c.idAcheteur}}</p>
-        <br>
-    {% endfor %}
-    </body>
+
+	<h2 align="center">Orders
+	</h2>
+	<br><br>
+
+	<table class="table table-striped text-center">
+		<thead class="bg-light text-capitalize">
+			<tr>
+
+				<th>Product name</th>
+				<th>Product code</th>
+				<th>Quantity</th>
+				<th>Order number</th>
+
+
+			</tr>
+		</thead>
+		<tbody>
+			{% for c in commande %}
+				<tr>
+					<td>{{ c.idProduit.nom }}</td>
+					<td>{{ c.idProduit.categorie }}</td>
+					<td>{{ c.quantite }}</td>
+					<td>{{ c.idCommande }}</td>
+
+
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="15">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+
+
 {% endblock %}
