--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -1,33 +1,34 @@
 {% extends 'admin/baseAdmin.html.twig' %}
 
-{% block title %}Commande{% endblock %}
+{% block title %}Commande
+{% endblock %}
 
 {% block body %}
 
 
-   <h1 style="color: aliceblue">Order</h1>
+	<h1 style="color: aliceblue">Order</h1>
 
-    <table class="table" style="color: aliceblue" border="5px" align="left">
-        <tbody>
-            <tr>
-                <th style="-moz-box-shadow: cadetblue" >Ref</th>
-                <td>{{ commandeprod.idCommande }}</td>
-            </tr>
-            <tr>
-                <th>Code</th>
-                <td>{{ commandeprod.idAcheteur }}</td>
-            </tr>
-            <tr>
-                <th>Quantite</th>
-                <td>{{ commandeprod.quantite }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table" style="color: aliceblue" border="5px" align="left">
+		<tbody>
+			<tr>
+				<th style="-moz-box-shadow: cadetblue">Ref</th>
+				<td>{{ commandeprod.idCommande }}</td>
+			</tr>
+			<tr>
+				<th>Code</th>
+				<td>{{ commandeprod.idAcheteur }}</td>
+			</tr>
+			<tr>
+				<th>Quantity</th>
+				<td>{{ commandeprod.quantite }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_commande_index') }}">list</a>
+	<a href="{{ path('app_commande_index') }}">list</a>
 
-    <a href="{{ path('app_commande_edit', {'idCommande': commandeprod.idCommande}) }}">edit</a>
-    <a class="btn btn-primary" href="{{path('ImprimerCommande')}}">Imprimer la commande</a>
+	<a href="{{ path('app_commande_edit', {'idCommande': commandeprod.idCommande}) }}">edit</a>
+	<a class="btn btn-primary" href="{{path('ImprimerCommande')}}">Print the order</a>
 
-    {{ include('commande/_delete_form.html.twig') }}
+	{{ include('commande/_delete_form.html.twig') }}
 {% endblock %}
