--- a/templates/devupload/_form.html.twig
+++ b/templates/devupload/_form.html.twig
@@ -1,8 +1,5 @@
-{% extends 'front/baseFront.html.twig' %}
 
-{% block title %}UPLOAD A GAME{% endblock %}
 
-{% block body %}
     <style>
         .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #000000; padding: 2px 6px; }
@@ -12,20 +9,18 @@
         <h1> </h1>
 
         <ul>
-            <h2 style="color: azure" align="center">YOU WANT TO CONTRIBUTE TO THE COMMUNITY WITH YOUR PERSONAL GAMES? DON'T THINK TWICE AND SHARE WITH THE TEAM YOUR AWESOME WORK!!</h2>
+            <h2 style="color: azure" align="center">WE ONLY ACCEPT COMPRESSED FILES! IN CASE OF MALICIOUS THREATS FOUND IN YOUR CODE YOU WILL GET BANNED!
+                THANK YOU FOR YOUR CONTRIBUTION.</h2>
         </ul>
 
 
     </div>
+    {{ form_start(form) }}
 
+    <button>
+        {{ form_widget(form.gameFile,{'attr': {'class': 'all'}}) }}
 
-    <a class="all" href="{{path('app_devupload_new')}}">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        YES!
-    </a>
+    </button>
 
     <style>
 
@@ -135,72 +130,6 @@
 
 
     </style>
-    <div style="padding-left: 700px" >
-        <canvas class="canvas js-canvas"></canvas>
-    </div>
-    <style>
 
+{{ form_end(form) }}
 
-    </style>
-    <script>
-        const ctx = document.querySelector('canvas').getContext('2d');
-        const { canvas } = ctx;
-
-        const TAU = Math.PI * 2;
-        const W = 500;
-        const H = W;
-        const R = W >> 1;
-        const R2 = R * 0.25;
-
-        const NUM_LINES = 100;
-        const LINE_ANGLE_STEP = TAU / NUM_LINES;
-        const LINE_WIDTH_ANGLE = 0.02;
-
-        let phase = 0;
-
-        canvas.width = W;
-        canvas.height = H;
-
-        const drawCircle = (scale = 1, iteration) => {
-            ctx.save();
-            ctx.translate(W >> 1, H >> 1);
-            ctx.scale(scale, scale);
-            ctx.strokeStyle = 'rgba(0, 0, 0, 0.55)';
-
-            for (let i = 0; i < NUM_LINES; i++) {
-                const angle = LINE_ANGLE_STEP * i;
-                const LINE_DEGREE_TO = LINE_ANGLE_STEP * 2 * (iteration * 0.2);
-                const angleIteration = iteration * 0.05;
-
-                ctx.beginPath();
-                ctx.moveTo(Math.cos(angle - angleIteration) * R, Math.sin(angle) * R);
-                ctx.lineTo(Math.cos(angle + angleIteration) * R2, Math.sin(angle + angleIteration) * R2);
-                ctx.closePath();
-                ctx.stroke();
-                ctx.fill();
-            }
-
-            ctx.restore();
-        };
-
-        const clear = () => {
-            ctx.clearRect(0, 0, W, H);
-        };
-
-        const loop = () => {
-            clear();
-            drawCircle(1, phase);
-            drawCircle(1, -phase);
-
-            // drawCircle(0.5, phase * 0.25);
-            // drawCircle(0.5, -phase * 0.25);
-
-            phase++;
-
-            requestAnimationFrame(loop);
-        };
-
-        loop();
-
-    </script>
-{% endblock %}
