--- a/templates/front/baseFront.html.twig
+++ b/templates/front/baseFront.html.twig
@@ -17,7 +17,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																																																																																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																																																																														           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 
 			<!-- Css Styles -->
@@ -45,12 +45,12 @@
 		<div class="humberger-menu-overlay"></div>
 		<div class="humberger-menu-wrapper">
 			<div class="hw-logo">
-				<a href="#"><img src="{{asset('front/assets/img/Esplay logo.png')}}" alt=""></a>
+				<a href="{{path('app_game_front')}}"><img src="{{asset('front/assets/img/Esplay logo.png')}}" alt=""></a>
 			</div>
 			<div class="hw-menu mobile-menu">
 				<ul>
 					<li>
-						<a href="./index.html">Home</a>
+						<a href="{{path('app_game_front')}}">Home</a>
 					</li>
 					<li>
 						<a href="#">Pages
@@ -200,7 +200,7 @@
 									{% else %}
 										<li class="signup-switch signup-open">
 											<i class="fa fa-sign-out"></i>
-											Sign in
+											Sign Up
 										</li>
 										<li class="login-switch signup-open">
 											<i class="fa fa-sign-out"></i>
@@ -237,7 +237,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 text-center">
-							<a href="./index.html"><img src="{{asset('front/assets/img/ESPLAY LOGO.png')}}" alt="" style="    max-width: 20%;"></a>
+							<a href="{{path('app_game_front')}}"><img src="{{asset('front/assets/img/ESPLAY LOGO.png')}}" alt="" style="    max-width: 20%;"></a>
 						</div>
 					</div>
 				</div>
@@ -385,7 +385,14 @@
 									</span>
 								</a>
 							</li>
-
+							{% if app.session.get('idsession') != null %}
+								<li>
+									<a href="{{path('app_devupload_index')}}">
+										<span>Upload
+										</span>
+									</a>
+								</li>
+							{% endif %}
 							<li></li>
 						</ul>
 					</div>
@@ -398,6 +405,8 @@
 
 		<!-- Footer Section Begin -->
 		<footer class="footer-section">
+
+
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-4">
@@ -405,18 +414,19 @@
 							<div class="fa-logo col-xl-5">
 								<a href="#"><img src="{{asset('front/assets/img/Esplay logo.png')}}" alt=""></a>
 							</div>
-							<p>Yes but sometimes no.</p>
+							<p>Esplay App, just for gamers
+							</p>
 							<div class="fa-social">
-								<a href="#">
+								<a href="https://www.facebook.com/RealityVisionEsprit">
 									<i class="fa fa-facebook"></i>
 								</a>
 								<a href="#">
 									<i class="fa fa-twitter"></i>
 								</a>
-								<a href="#">
+								<a href="https://www.youtube.com/channel/UCCeXmUmBuoDZAjJoKji592g">
 									<i class="fa fa-youtube-play"></i>
 								</a>
-								<a href="#">
+								<a href="https://www.instagram.com/realityvisionesprit/">
 									<i class="fa fa-instagram"></i>
 								</a>
 							</div>
@@ -507,6 +517,7 @@
 							</div>
 						</div>
 					</div>
+
 				</div>
 				<div class="copyright-area">
 					<div class="row">
@@ -519,7 +530,7 @@
 										document.write(new Date().getFullYear());
 									</script>
 									All rights reserved | This
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																								                                template is made with
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																											                                template is made with
 									<i class="fa fa-heart" aria-hidden="true"></i>
 									by
 									<a href="https://colorlib.com" target="_blank">Reality Vision</a>
@@ -538,6 +549,8 @@
 					</div>
 				</div>
 			</div>
+
+
 		</footer>
 		<!-- Footer Section End -->
 
