--- a/templates/game/game1.html.twig
+++ b/templates/game/game1.html.twig
@@ -15,6 +15,8 @@
 			width: 100%;
 		}
 	</style>
+	<link rel="stylesheet" href="{{asset('front/assets/css/rating.css')}}" type="text/css">
+
 
 	<div class="example-wrapper">
 
@@ -25,17 +27,15 @@
 			<h4 style="color: azure" align="center">RULE : COMPLETE STAGES TO RESCUE THE PRINCESS</h4>
 		</ul>
 	</div>
-	<h1>Your Rating</h1>
-	<link rel="stylesheet" type="text/css" href="{{ asset('bundles/starrating/css/rating.css') }}"/>
 
-	{{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
-	{{ form_widget(form) }}
-	<button type="submit" class="btn-success">Submit
-	</button>
-	{{ form_end(form) }}
+		<h1>
+			{{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
+			{{ form_widget(form) }}
+			<button type="submit" class="btn-success">Submit
+			</button></h1>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="{{ asset('bundles/starrating/js/rating.js') }}"></script>
+
+		{{ form_end(form) }}
 	<style>
 		* {
 			font-family: "Lato";
@@ -43,12 +43,12 @@
 
 		/*decoration*/
 		h1 {
-			margin: 20px 50px 0;
-			background: #EFF0F2;
-			width: 275px;
+			margin: -300px -1px 0;
+			background: #581c22;
+			width: 199px;
 			font-size: 1.5em;
 			text-align: center;
-			border-radius: 5px 5px 0 0;
+			border-radius: 22px 35px 0 0;
 			padding: 30px 0;
 			color: #34495E;
 		}
@@ -171,4 +171,6 @@
 			color: #d35400 !important;
 		}
 	</style>
-{% endblock %}
+
+
+		{% endblock %}
