--- a/templates/produit2/_form.html.twig
+++ b/templates/produit2/_form.html.twig
@@ -1,3 +1,4 @@
+<div class="form">
 {{ form_start(form) }}
 <div class="input-container ic1">
 	{{ form_widget(form.nom, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
@@ -48,10 +49,102 @@
 </div>
 
 
-<button class="submit">{{ button_label|default('ADD') }}</button>
-<a class="buttonn" href="{{ path('app_produit2_index') }}">back to list</a>
-
+<button class="submit">{{ button_label|default('ADD PRODUCT') }}</button>
+<a class="buttonn" href="{{ path('app_produit2_index2') }}">back to list</a>
+</div>
 <style>
+	.custom-btn {
+		width: 130px;
+		height: 40px;
+		color: #fff;
+		border-radius: 5px;
+		padding: 10px 25px;
+		font-family: 'Lato', sans-serif;
+		font-weight: 500;
+		background: transparent;
+		cursor: pointer;
+		transition: all 0.3s ease;
+		position: relative;
+		display: inline-block;
+		box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+		7px 7px 20px 0px rgba(0,0,0,.1),
+		4px 4px 5px 0px rgba(0,0,0,.1);
+		outline: none;
+	}
+	.btn-8 {
+		background-color: #f0ecfc;
+		background-image: linear-gradient(315deg, #3b22f1 0%, #c797eb 74%);
+		line-height: 42px;
+		padding: 0;
+		border: none;
+	}
+	.btn-8 span {
+		position: relative;
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	.btn-8:before,
+	.btn-8:after {
+		position: absolute;
+		content: "";
+		right: 0;
+		bottom: 0;
+		background: #c797eb;
+		/*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                    -4px -4px 6px 0 rgba(116, 125, 136, .2),
+          inset -4px -4px 6px 0 rgba(255,255,255,.5),
+          inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+		transition: all 0.3s ease;
+	}
+	.btn-8:before{
+		height: 0%;
+		width: 2px;
+	}
+	.btn-8:after {
+		width: 0%;
+		height: 2px;
+	}
+	.btn-8:hover:before {
+		height: 100%;
+	}
+	.btn-8:hover:after {
+		width: 100%;
+	}
+	.btn-8:hover{
+		background: transparent;
+	}
+	.btn-8 span:hover{
+		color: #c797eb;
+	}
+	.btn-8 span:before,
+	.btn-8 span:after {
+		position: absolute;
+		content: "";
+		left: 0;
+		top: 0;
+		background: #c797eb;
+		/*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                    -4px -4px 6px 0 rgba(116, 125, 136, .2),
+          inset -4px -4px 6px 0 rgba(255,255,255,.5),
+          inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+		transition: all 0.3s ease;
+	}
+	.btn-8 span:before {
+		width: 2px;
+		height: 0%;
+	}
+	.btn-8 span:after {
+		height: 2px;
+		width: 0%;
+	}
+	.btn-8 span:hover:before {
+		height: 100%;
+	}
+	.btn-8 span:hover:after {
+		width: 100%;
+	}
+
 	body {
 		align-items: center;
 		background-color: #000;
@@ -61,13 +154,13 @@
 	}
 	.form {
 		background-color: #444958;
-		border-radius: 30px;
+		border-radius: 38px;
 		box-sizing: border-box;
-		height: 650px;
+		height: 907px;
 		padding: 20px;
-		width: 450px;
-		margin-left: 500px;
-		margin-top: 10px;
+		width: 534px;
+		margin-left: 532px;
+		margin-top: 1px;
 	}
 	.title {
 		color: #eee;
@@ -104,7 +197,7 @@
 		height: 100%;
 		outline: 0;
 		padding: 4px 20px 0;
-		width: 100%;
+		width: 200%;
 	}
 	.cut {
 		background-color: #15172b;
