--- a/templates/produit2/new.html.twig
+++ b/templates/produit2/new.html.twig
@@ -2,10 +2,10 @@
 {% block title %}New Produit{% endblock %}
 
 {% block body %}
-    <h1 style="color: azure">Create new</h1>
+    <h1 style="color: azure" align="center">Create new</h1>
 
     {{ include('produit2/_form.html.twig') }}
 
     <a style="color: transparent" href="{{ path('app_produit2_index2') }}">back to list</a>
-    <a class="btn btn-dark" href="{{  path('app_produit2_index')}}">  GO TO FRONT </a>
+
 {% endblock %}
