--- a/templates/produit2/show.html.twig
+++ b/templates/produit2/show.html.twig
@@ -3,59 +3,59 @@
 {% endblock %}
 
 {% block body %}
-	<section style="background-color: black;">
-		<h1>Produit</h1>
+	<section style="background-color: #0d0d0d;">
 
-		<table class="table" bgcolor="#a9a9a9">
-			<tbody bgcolor="#a9a9a9">
-				<tr>
-					<th>Id</th>
-					<td>{{ produit2.idp2 }}</td>
-				</tr>
-				<tr>
-					<th>Nom</th>
-					<td>{{ produit2.nom }}</td>
-				</tr>
-				<tr>
-					<th>Description</th>
-					<td>{{ produit2.description }}</td>
-				</tr>
-				<tr>
-					<th>Categorie</th>
-					<td>{{ produit2.categoryP.name }}</td>
+		<div class="container">
+			<h3 style="color:#e11919; margin-top: 50px;">{{ produit2.nom }}
+				Product</h3>
+			<center>
 
-				</tr>
-				<tr>
-					<th>Date</th>
-					<td>{{ produit2.date ? produit2.date|date('Y-m-d') : '' }}</td>
-				</tr>
-				<tr>
+				<img src="{{ vich_uploader_asset(produit2, 'imageFile')|imagine_filter('thumb') }}" alt="card-image-top" style="width: auto; height:auto ">
+			</center>
+			<table class="table" bgcolor="#d8d5d5" style="margin-top: 50px">
+				<tbody bgcolor="#d8d5d5">
 
-					<img src="{{ vich_uploader_asset(produit2, 'imageFile')|imagine_filter('thumb') }}" alt="card-image-top" style="width: auto; height:auto ">
-				</tr>
-				<tr>
-					<th>Prix</th>
-					<td>{{ produit2.prix }}</td>
-				</tr>
-				<tr>
-					<th>StockProduit</th>
-					<td>{{ produit2.stockProduit }}</td>
-				</tr>
-				<tr>
-					<th>Produit2</th>
-					<td>{{ produit2.produit2 }}</td>
-				</tr>
-			</tbody>
-		</table>
-		<a href="{{ path('app_produit2_index')}}">
+					<tr>
+						<th>Name</th>
+						<td>{{ produit2.nom }}</td>
+					</tr>
+					<tr>
+						<th>Description</th>
+						<td>{{ produit2.description }}</td>
+					</tr>
+					<tr>
+						<th>Category</th>
+						<td>{{ produit2.categoryP.name }}</td>
 
-			Back to store
-		</a>
-		<a href="{{ path('cart_add', {'idp2': produit2.idp2}) }}" class="btn btn-success float-centre">
-			<i class="fas fa-shopping-cart mr-1"></i>
-			Cart
-		</a>
+					</tr>
+					<tr>
+						<th>Date</th>
+						<td>{{ produit2.date ? produit2.date|date('Y-m-d') : '' }}</td>
+					</tr>
 
+					<tr>
+						<th>Price</th>
+						<td>{{ produit2.prix }}</td>
+					</tr>
+					<tr>
+						<th>Product stock</th>
+						<td>{{ produit2.stockProduit }}</td>
+					</tr>
+					<tr>
+						<th>Product</th>
+						<td>{{ produit2.produit2 }}</td>
+					</tr>
+				</tbody>
+			</table>
+			<a href="{{ path('app_produit2_index')}}" class="btn btn-outline-secondary">
+
+				Back to store
+			</a>
+			<a href=" {{ path('cart_add', {'idp2': produit2.idp2} ) }}" class=" btn btn-danger float-centre">
+				<i class="fa fa-shopping-cart mr-1"></i>
+				Cart
+			</a>
+		</div>
 
 	</section>
 
