--- a/templates/recomendedg/editComment.html.twig
+++ b/templates/recomendedg/editComment.html.twig
@@ -1,12 +1,25 @@
 {% extends 'front/baseFront.html.twig' %}
-{% block title %}Edit Commentaire{% endblock %}
+{% block title %}Edit Comment
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Commentaire</h1>
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-    {{ form_end(form) }}
-
+	<section style="background-color: #d8d5d5;">
+		<div class="container">
+			<h3 style="color:#e11919; margin-top: 50px;">Edit comment</h3>
+			{{ form_start(form) }}
+			<div class="input-container ic1">
+				{{ form_widget(form.Text, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+				<div class="cut cut-short"></div>
+				<label class="placeholder">Comment</label>
+			</div>
+			<div class="input-container ic1">
+				{{ form_widget(form.rate, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+				<div class="cut cut-short"></div>
+				<label class="placeholder">Rating</label>
+			</div>
+			<button class="btn btn-outline-primary">{{ button_label|default('Save') }}</button>
+			{{ form_end(form) }}
+		</div>
+	</section>
 {% endblock %}
