--- a/templates/recomendedg/index.html.twig
+++ b/templates/recomendedg/index.html.twig
@@ -1,206 +1,171 @@
 {% extends 'front/baseFront.html.twig' %}
 
-{% block title %}Recomended Game index{% endblock %}
+{% block title %}Recomended Game index
+{% endblock %}
 
 {% block body %}
-    <div class="">
-        <div id="divs">
-            <input class="form-control" type="text" id="search" placeholder="🔍">
-            <a style="color:#FF0000;" class="tg-btn" href="" id="idup">UP ⬆️</a>
-            <a style="color:#25DD28;" class="tg-btn" href="" id="iddown">DOWN ⬇️</a>
-        </div>
-
-        <h1>Recomended Games</h1>
-
-        <table id="t" class="table">
-            <thead>
-            <tr>
-                <th>Nom</th>
-                <th>Categorie</th>
-                <th>Platform</th>
-                <th>Url</th>
-                <th>Prix</th>
-                <th>Action</th>
-            </tr>
-            </thead>
-            <tbody id="all">
-            {% for recomendedg in recomendedgs %}
-
-                <tr>
-                    <td>{{ recomendedg.nom }}</td>
-                    <td>{{ recomendedg.category.categoryName }}</td>
-                    <td>{{ recomendedg.platform }}</td>
-                    <td>{{ recomendedg.url }}</td>
-                    <td>{{ recomendedg.prix }}</td>
-                    <td>
-                        <a href="/recomendedg/Client/{{ recomendedg.id }}" class="btn btn-warning">Show</a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-            <tbody id="search">
-            </tbody>
-
-        </table>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-        </script>
-        <script>
-            $( document ).ready(function() {
-
-                /*begin rechercher avancee multicritéres selon sujet et            $("#divs").keyup(fun staus*/
-                $("#divs").keyup(function(e){
-                    /* La variable value va prendre la valeur insérer dans le champ de texte afin d’effectuer la recherche */
-                    var value = $("#search").val();
-                        //    alert(value);
-                        /* Ajax est lancé lors du remplissage du champ texte dont l’id est « search » pour faire la recherche */
-                        $.ajax({
-                            /* l’url est une chaine de caractères contenant l’adresse où la requête est envoyée */
-                            url : "{{ path('search_recc') }}",
-                            /* La méthode utilisée pour transférer les données est GET */
-                            type : 'GET',
-                            /*Ici search value va prendre la chaine entrée par un utilisateur dans la zone de recherche et sera placée après l’url */
-                            data: {
-                                'searchValue' : value,
-                            },
-                            /*Cette fonction permet de vider le contenu du tableau pour recevoir le nouveau contenu*/
-                            success : function(retour){
-                                if(retour){
-                                    $('#t tbody#search').empty();
-                                    $.each(JSON.parse(retour), function(i, obj) {
-                                        $('#t tbody#all').hide();
-                                        $('#t tbody#search').append(
-                                        '<tr>' +
-                                            '<td> '+obj.nom +'  </td>' +
-                                            '<td>    '+obj.category.categoryName+'  </td>' +
-                                        '<td>'+obj.platform+' </td>' +
-                                        '<td>'+obj.url+' </td>' +
-                                        '<td>'+obj.prix+' </td>' +
-                                            '<td>' +
-                                            '<a href="/recomendedg/Client/'+obj.id+'" class="btn btn-warning">Show</a> ' +
-                                            '</td>' +
-                                            '</tr>');
-                                    });
-                                }
-                                else
-                                {
-
-                                    $('#t tbody#all').show();
-                                    $('#t tbody#search').empty();
-                                    $('#t tbody#search').fadeIn('fast');
-
-                                }
-                            },
-                        });
-                        return false;
-                });
-                /*end rechercher avancee multicritéres selon nom et platform*/
+	<div class="">
 
 
-                /*begin trie up selon prix*/
-                $("#idup").click(function(e){
-                    /* La variable value va prendre la valeur insérer dans le champ de texte afin d’effectuer la recherche */
-                    var value = $("#search").val();
-                    var value3 ="ASC";
+		<section style="background-color: #d8d5d5;">
+			<div class="container">
+				<h3 style="color:#e11919; margin-top: 50px;">Recomended Games</h3>
+				<div class="row">
+					<div class="col-3"></div>
+					<div class="col-3"></div>
+					<div class="col-3"></div>
+					<div class="col-3">
+						<input class="form-control" type="text" id="search" placeholder="🔍">
+					</div>
+				</div>
+				<table id="t" class="table">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Category</th>
+							<th>Platform</th>
+							<th>Url</th>
+							<th>Price</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody id="all">
+						{% for recomendedg in recomendedgs %}
 
-                    //    alert(value);
-                    /* Ajax est lancé lors du remplissage du champ texte dont l’id est « search » pour faire la recherche */
-                    $.ajax({
-                        /* l’url est une chaine de caractères contenant l’adresse où la requête est envoyée */
-                        url : "{{ path('search_recc') }}",
-                        /* La méthode utilisée pour transférer les données est GET */
-                        type : 'GET',
-                        /*Ici search value va prendre la chaine entrée par un utilisateur dans la zone de recherche et sera placée après l’url */
-                        data: {
-                            'searchValue' : value,
-                            'orderid': value3
-                        },
-                        /*Cette fonction permet de vider le contenu du tableau pour recevoir le nouveau contenu*/
-                        success : function(retour){
-                            if(retour){
-                                $('#t tbody#search').empty();
-                                $.each(JSON.parse(retour), function(i, obj) {
-                                    $('#t tbody#all').hide();
-                                    $('#t tbody#search').append(
-                                        '<tr>' +
-                                        '<td> '+obj.nom +'  </td>' +
-                                        '<td>    '+obj.category.categoryName+'  </td>' +
-                                        '<td>'+obj.platform+' </td>' +
-                                        '<td>'+obj.url+' </td>' +
-                                        '<td>'+obj.prix+' </td>' +
-                                        '<td>' +
-                                        '<a href="/recomendedg/Client/'+obj.id+'" class="btn btn-warning">Show</a> ' +
-                                        '</td>' +
-                                        '</tr>');
-                                });
-                            }
-                            else
-                            {
-                                $('#t tbody#all').show();
-                                $('#t tbody#search').empty();
-                                $('#t tbody#search').fadeIn('fast');
-                            }
-                        },
-                    });
-                    return false;
+							<tr>
+								<td>{{ recomendedg.nom }}</td>
+								<td>{{ recomendedg.category.categoryName }}</td>
+								<td>{{ recomendedg.platform }}</td>
+								<td>{{ recomendedg.url }}</td>
+								<td>{{ recomendedg.prix }}</td>
+								<td>
+									<a href="/recomendedg/Client/{{ recomendedg.id }}" class="btn btn-warning">Show</a>
+								</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+					<tbody id="search"></tbody>
 
-                });
-                /*end trie up selon prix*/
+				</table>
+				<div id="divs">
 
-                /*begin trie down selon prix*/
-                $("#iddown").click(function(e){
-                    /* La variable value va prendre la valeur insérer dans le champ de texte afin d’effectuer la recherche */
-                    var value = $("#search").val();
-                    var value3 ="DESC";
+					<a style="color:#FF0000;" class="tg-btn" href="" id="idup">UP ⬆️</a>
+					<a style="color:#25DD28;" class="tg-btn" href="" id="iddown">DOWN ⬇️</a>
+				</div>
+			</div>
+		</section>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script>
+			$(document).ready(function () { /*begin rechercher avancee multicritéres selon sujet et            $("#divs").keyup(fun staus*/
+$("#divs").keyup(function (e) { /* La variable value va prendre la valeur insérer dans le champ de texte afin d’effectuer la recherche */
+var value = $("#search").val();
+//    alert(value);
+/* Ajax est lancé lors du remplissage du champ texte dont l’id est « search » pour faire la recherche */
+$.ajax({ /* l’url est une chaine de caractères contenant l’adresse où la requête est envoyée */
+url: "{{ path('search_recc') }}",
+/* La méthode utilisée pour transférer les données est GET */
+type: 'GET',
+/*Ici search value va prendre la chaine entrée par un utilisateur dans la zone de recherche et sera placée après l’url */
+data: {
+'searchValue': value
+},
+/*Cette fonction permet de vider le contenu du tableau pour recevoir le nouveau contenu*/
+success: function (retour) {
+if (retour) {
+$('#t tbody#search').empty();
+$.each(JSON.parse(retour), function (i, obj) {
+$('#t tbody#all').hide();
+$('#t tbody#search').append('<tr>' + '<td> ' + obj.nom + '  </td>' + '<td>    ' + obj.category.categoryName + '  </td>' + '<td>' + obj.platform + ' </td>' + '<td>' + obj.url + ' </td>' + '<td>' + obj.prix + ' </td>' + '<td>' + '<a href="/recomendedg/Client/' + obj.id + '" class="btn btn-warning">Show</a> ' + '</td>' + '</tr>');
+});
+} else {
 
-                    //    alert(value);
-                    /* Ajax est lancé lors du remplissage du champ texte dont l’id est « search » pour faire la recherche */
-                    $.ajax({
-                        /* l’url est une chaine de caractères contenant l’adresse où la requête est envoyée */
-                        url : "{{ path('search_recc') }}",
-                        /* La méthode utilisée pour transférer les données est GET */
-                        type : 'GET',
-                        /*Ici search value va prendre la chaine entrée par un utilisateur dans la zone de recherche et sera placée après l’url */
-                        data: {
-                            'searchValue' : value,
-                            'orderid': value3
-                        },
-                        /*Cette fonction permet de vider le contenu du tableau pour recevoir le nouveau contenu*/
-                        success : function(retour){
-                            if(retour){
-                                $('#t tbody#search').empty();
-                                $.each(JSON.parse(retour), function(i, obj) {
-                                    $('#t tbody#all').hide();
-                                    $('#t tbody#search').append(
-                                        '<tr>' +
-                                        '<td> '+obj.nom +'  </td>' +
-                                        '<td>    '+obj.category.categoryName+'  </td>' +
-                                        '<td>'+obj.platform+' </td>' +
-                                        '<td>'+obj.url+' </td>' +
-                                        '<td>'+obj.prix+' </td>' +
-                                        '<td>' +
-                                        '<a href="/recomendedg/Client/'+obj.id+'" class="btn btn-warning">Show</a> ' +
-                                        '</td>' +
-                                        '</tr>');
-                                });
-                            }
-                            else
-                            {
-                                $('#t tbody#all').show();
-                                $('#t tbody#search').empty();
-                                $('#t tbody#search').fadeIn('fast');
-                            }
-                        },
-                    });
-                    return false;
+$('#t tbody#all').show();
+$('#t tbody#search').empty();
+$('#t tbody#search').fadeIn('fast');
 
-                });
-                /*end trie down selon prix*/
-            });
-        </script>
+}
+}
+});
+return false;
+});
+/*end rechercher avancee multicritéres selon nom et platform*/
 
-    </div>
 
+/*begin trie up selon prix*/
+$("#idup").click(function (e) { /* La variable value va prendre la valeur insérer dans le champ de texte afin d’effectuer la recherche */
+var value = $("#search").val();
+var value3 = "ASC";
+
+//    alert(value);
+/* Ajax est lancé lors du remplissage du champ texte dont l’id est « search » pour faire la recherche */
+$.ajax({ /* l’url est une chaine de caractères contenant l’adresse où la requête est envoyée */
+url: "{{ path('search_recc') }}",
+/* La méthode utilisée pour transférer les données est GET */
+type: 'GET',
+/*Ici search value va prendre la chaine entrée par un utilisateur dans la zone de recherche et sera placée après l’url */
+data: {
+'searchValue': value,
+'orderid': value3
+},
+/*Cette fonction permet de vider le contenu du tableau pour recevoir le nouveau contenu*/
+success: function (retour) {
+if (retour) {
+$('#t tbody#search').empty();
+$.each(JSON.parse(retour), function (i, obj) {
+$('#t tbody#all').hide();
+$('#t tbody#search').append('<tr>' + '<td> ' + obj.nom + '  </td>' + '<td>    ' + obj.category.categoryName + '  </td>' + '<td>' + obj.platform + ' </td>' + '<td>' + obj.url + ' </td>' + '<td>' + obj.prix + ' </td>' + '<td>' + '<a href="/recomendedg/Client/' + obj.id + '" class="btn btn-warning">Show</a> ' + '</td>' + '</tr>');
+});
+} else {
+$('#t tbody#all').show();
+$('#t tbody#search').empty();
+$('#t tbody#search').fadeIn('fast');
+}
+}
+});
+return false;
+
+});
+/*end trie up selon prix*/
+
+/*begin trie down selon prix*/
+$("#iddown").click(function (e) { /* La variable value va prendre la valeur insérer dans le champ de texte afin d’effectuer la recherche */
+var value = $("#search").val();
+var value3 = "DESC";
+
+//    alert(value);
+/* Ajax est lancé lors du remplissage du champ texte dont l’id est « search » pour faire la recherche */
+$.ajax({ /* l’url est une chaine de caractères contenant l’adresse où la requête est envoyée */
+url: "{{ path('search_recc') }}",
+/* La méthode utilisée pour transférer les données est GET */
+type: 'GET',
+/*Ici search value va prendre la chaine entrée par un utilisateur dans la zone de recherche et sera placée après l’url */
+data: {
+'searchValue': value,
+'orderid': value3
+},
+/*Cette fonction permet de vider le contenu du tableau pour recevoir le nouveau contenu*/
+success: function (retour) {
+if (retour) {
+$('#t tbody#search').empty();
+$.each(JSON.parse(retour), function (i, obj) {
+$('#t tbody#all').hide();
+$('#t tbody#search').append('<tr>' + '<td> ' + obj.nom + '  </td>' + '<td>    ' + obj.category.categoryName + '  </td>' + '<td>' + obj.platform + ' </td>' + '<td>' + obj.url + ' </td>' + '<td>' + obj.prix + ' </td>' + '<td>' + '<a href="/recomendedg/Client/' + obj.id + '" class="btn btn-warning">Show</a> ' + '</td>' + '</tr>');
+});
+} else {
+$('#t tbody#all').show();
+$('#t tbody#search').empty();
+$('#t tbody#search').fadeIn('fast');
+}
+}
+});
+return false;
+
+});
+/*end trie down selon prix*/
+});
+		</script>
+
+	</div>
 
 
 {% endblock %}
