--- a/templates/recomendedg/indexOne.html.twig
+++ b/templates/recomendedg/indexOne.html.twig
@@ -1,77 +1,98 @@
 {% extends 'front/baseFront.html.twig' %}
 
-{% block title %}Recomended Games index{% endblock %}
+{% block title %}Recomended Games index
+{% endblock %}
 
 {% block body %}
-    {% for message in app.flashes('info')  %}
-        <div class="alert alert-success">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% for message in app.flashes('info-edit')  %}
-        <div class="alert alert-warning">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% for message in app.flashes('info-delete')  %}
-        <div class="alert alert-danger">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {{ socialButtons() }}
+	{% for message in app.flashes('info')  %}
+		<div class="alert alert-success">
+			{{ message }}
+		</div>
+	{% endfor %}
+	{% for message in app.flashes('info-edit')  %}
+		<div class="alert alert-warning">
+			{{ message }}
+		</div>
+	{% endfor %}
+	{% for message in app.flashes('info-delete')  %}
+		<div class="alert alert-danger">
+			{{ message }}
+		</div>
+	{% endfor %}
 
-    <h1>Recomended Games</h1>
+	<section style="background-color: #d8d5d5;">
+		<div class="container">
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Categorie</th>
-            <th>Platform</th>
-            <th>Url</th>
-            <th>Prix</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>{{ recomendedg.nom }}</td>
-            <td>{{ recomendedg.category.categoryName }}</td>
-            <td>{{ recomendedg.platform }}</td>
-            <td>{{ recomendedg.url }}</td>
-            <td>{{ recomendedg.prix }}</td>
-        </tr>
-        </tbody>
-    </table>
+			<div class="p-3">
+				<h3 style="color:#e11919; margin-top: 50px;">Recommended games</h3>
+			</div>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Commentaire</th>
-            <th>Rating</th>
-            <th>actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for comment in comments %}
-            <tr>
-                <td>{{ comment.text }}</td>
-                <td>{{ comment.rate|rating }}</td>
-                <td>
-                    <a class="btn btn-warning" href="{{ path('app_commentaire_edit', {'id': comment.id}) }}">edit</a>
-                    <a class="btn btn-danger" href="{{ path('app_recomendedg_delete_index', {'id': comment.id}) }}">Delete</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Comment') }}</button>
-    {{ form_end(form) }}
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Nom</th>
+						<th>Categorie</th>
+						<th>Platform</th>
+						<th>Url</th>
+						<th>Prix</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>{{ recomendedg.nom }}</td>
+						<td>{{ recomendedg.category.categoryName }}</td>
+						<td>{{ recomendedg.platform }}</td>
+						<td>{{ recomendedg.url }}</td>
+						<td>{{ recomendedg.prix }}</td>
+					</tr>
+				</tbody>
+			</table>
 
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Comment</th>
+						<th>Rating</th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for comment in comments %}
+						<tr>
+							<td>{{ comment.text }}</td>
+							<td>{{ comment.rate | rating }}</td>
+							<td>
+								<a class="btn btn-warning" href="{{ path('app_commentaire_edit', {'id': comment.id}) }}">edit</a>
+								<a class="btn btn-danger" href="{{ path('app_recomendedg_delete_index', {'id': comment.id}) }}">Delete</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="3">no records found</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
+			<div class="row">
+				<div class="col-8">
+					{{ form_start(form) }}
+					<div class="input-container ic1">
+						{{ form_widget(form.Text, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+						<div class="cut cut-short"></div>
+						<label class="placeholder">Comment</label>
+					</div>
+					<div class="input-container ic1">
+						{{ form_widget(form.rate, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+						<div class="cut cut-short"></div>
+						<label class="placeholder">Rating</label>
+					</div>
+					<button class="btn btn-outline-primary">{{ button_label|default('Submit') }}</button>
+					{{ form_end(form) }}
+				</div>
+				<div class="col-4">{{ socialButtons() }}
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
