--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 	font-family: "Montserrat", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	background-color: #0d0d0d;
+	background-color: #2c2c2c;
 }
 
 h1,
