--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -44,72 +44,79 @@
 											<table id="example" class="table table-striped table-bordered">
 												<thead>
 													<tr>
-														<th>IdCommande</th>
-														<th>Code</th>
+														<th>Order code</th>
+														<th>Product code</th>
+														<th>Product name</th>
+														<th>Buyer</th>
 														<th>Quantity</th>
-														<th>actions</th>
+														<th colspan="2">actions</th>
 													</tr>
 												</thead>
 												<tbody>
 													{% for commandeprod in commandeprods %}
 														<tr>
 															<td>{{ commandeprod.idCommande }}</td>
-															<td>{{ commandeprod.idAcheteur }}</td>
+															<td>{{ commandeprod.idProduit.categorie }}</td>
+															<td>{{ commandeprod.idProduit.nom }}</td>
+															<td>{{ commandeprod.idAcheteur.username }}</td>
 															<td>{{ commandeprod.quantite }}</td>
 
 															<td>
-																<a href="{{ path('app_commande_edit', {'idCommande': commandeprod.idCommande}) }}" class="btn btn-success">Modifier</a>
+
+																<a href="{{ path('app_commande_edit', {'idCommande': commandeprod.idCommande}) }}" class="btn btn-success btn-sm">Update</a>
 															</td>
 															<td>
 																{{ include('commande/_delete_form.html.twig') }}</td>
-
 														</tr>
-													{% endfor %}
-													<a class="btn btn-primary" href="{{path('ImprimerCommande')}}">Print the Order</a>
+													</td>
 												</tbody>
-											</tbody>
-										</table>
-									</div>
-								</div>
+											</tr>
+										{% endfor %}
+										<a class="btn btn-primary" href="{{path('ImprimerCommande')}}">Print the Order</a>
+									</tbody>
+								</tbody>
+							</table>
+						</div>
+					</div>
 
 
-								<!-- section-wrapper -->
+					<!-- section-wrapper -->
 
 
-								{#
-																									    <h1 style="color: aliceblue">Orders </h1>
-																									    <style>
-																									        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-																									        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-																									    </style>
-																									    <table class="table" bgcolor="#f0f8ff" style="color: aliceblue">
-																									        <thead >
-																									            <tr>
-																									                <th>IdCommande</th >
-																									                <th>Code</th>
-																									                <th>Quantity</th>
-																									                <th>actions</th>
-																									            </tr>
-																									        </thead>
-																									        <tbody>
-																									        {% for commandeprod in commandeprods %}
-																									            <tr>
-																									                <td>{{ commandeprod.idCommande }}</td>
-																									                <td>{{ commandeprod.idAcheteur }}</td>
-																									                <td>{{ commandeprod.quantite }}</td>
-																									                <td>
-																									                    <a href="{{ path('app_commande_show', {'idCommande': commandeprod.idCommande}) }}">show.      .</a>
-																									                    <a href="{{ path('app_commande_edit', {'idCommande': commandeprod.idCommande}) }}">.        edit</a>
-																									                </td>
-																									            </tr>
-																									        {% else %}
-																									            <tr>
-																									                <td colspan="4">no records</td>
-																									            </tr>
-																									        {% endfor %}
-																									
-																									        </tbody>
-																									    </table>
-																									
-																									    <a href="{{ path('app_commande_new') }}">Create new</a>#}
-							{% endblock %}
+					{#
+																																																																    <h1 style="color: aliceblue">Orders </h1>
+																																																																    <style>
+																																																																        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+																																																																        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+																																																																    </style>
+																																																																    <table class="table" bgcolor="#f0f8ff" style="color: aliceblue">
+																																																																        <thead >
+																																																																            <tr>
+																																																																                <th>IdCommande</th >
+																																																																                <th>Code</th>
+																																																																                <th>Quantity</th>
+																																																																                <th>actions</th>
+																																																																            </tr>
+																																																																        </thead>
+																																																																        <tbody>
+																																																																        {% for commandeprod in commandeprods %}
+																																																																            <tr>
+																																																																                <td>{{ commandeprod.idCommande }}</td>
+																																																																                <td>{{ commandeprod.idAcheteur }}</td>
+																																																																                <td>{{ commandeprod.quantite }}</td>
+																																																																                <td>
+																																																																                    <a href="{{ path('app_commande_show', {'idCommande': commandeprod.idCommande}) }}">show.      .</a>
+																																																																                    <a href="{{ path('app_commande_edit', {'idCommande': commandeprod.idCommande}) }}">.        edit</a>
+																																																																                </td>
+																																																																            </tr>
+																																																																        {% else %}
+																																																																            <tr>
+																																																																                <td colspan="4">no records</td>
+																																																																            </tr>
+																																																																        {% endfor %}
+																																																																
+																																																																        </tbody>
+																																																																    </table>
+																																																																
+																																																																    <a href="{{ path('app_commande_new') }}">Create new</a>#}
+				{% endblock %}
