--- a/templates/front/baseFront.html.twig
+++ b/templates/front/baseFront.html.twig
@@ -17,7 +17,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																																																																																																														           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																																																																																           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 
 			<!-- Css Styles -->
@@ -255,7 +255,7 @@
 					<div class="nav-menu">
 						<ul>
 							<li class="active">
-								<a>
+								<a href="{{path('app_game_front')}}">
 									<span>Home</span>
 								</a>
 							</li>
@@ -268,22 +268,22 @@
 								<div class="megamenu-wrapper" style="margin-top : 50px;">
 									<ul class="mw-nav">
 										<li>
-											<a href="#">
+											<a>
 												<span>Tick Tack Toe</span>
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a>
 												<span>Snake</span>
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a>
 												<span>Super Mario</span>
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a>
 												<span>Tetris</span>
 											</a>
 										</li>
@@ -530,7 +530,7 @@
 										document.write(new Date().getFullYear());
 									</script>
 									All rights reserved | This
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																											                                template is made with
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				                                template is made with
 									<i class="fa fa-heart" aria-hidden="true"></i>
 									by
 									<a href="https://colorlib.com" target="_blank">Reality Vision</a>
